--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <script src="game.js"></script>
 </head>
 <body>
-  <p>Appuyer sur la barre espace pour sauter</p>
+  <p>Aaaaappuyer sur la barre espace pour sauter</p>
   <div id="game"></div>
 </body>
 </html>
